# todolist-fastapi

./: .env  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  init_db.py  main.py  pyproject.toml  structure.txt
.github/workflows/: build.yml
app/api/: task.py  tasks.py
app/core/: db.py  init_db.py
app/crud/: base.py  task.py  tasks.py
app/models/: task.py  tasks.py
app/schemas/: task.py
