[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Ryabov Andrey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.42"
pydantic = "^2.11.7"
asyncpg = "^0.30.0"
pydantic-settings = "^2.10.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
